# two-percent-detector

./: LICENSE  README.md  pyproject.toml
two_percent_detector/: __init__.py  __main__.py  common_words.json  config.py  detector.py  discord.py  emotes.py  kick_monitor.py  monitor.py  rumble_monitor.py  stats.py  twitch_monitor.py  ui.py  user_agent.py
two_percent_detector/core/: __init__.py  chat_types.py  detector.py  stats.py
two_percent_detector/data/: known_bots.json
two_percent_detector/integrations/: __init__.py  discord.py
two_percent_detector/ui/: __init__.py  terminal.py
two_percent_detector/utils/: __init__.py  emotes.py  user_agent.py
